--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.container {
+    max-width: 1240px;
+    margin: 0 auto;
+}
+
+.menu {
+    li {
+        display: inline-block;
+        margin-left: 20px;
+    }
+}
+
+
+.section-title {
+    @apply text-2xl;
+}
