--- a/styles/app.scss
+++ b/styles/app.scss
@@ -17,21 +17,124 @@ body {
 }
 
 @-webkit-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-@-moz-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-@keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
+    0% {
+        background-position: 0% 50%
+    }
+    50% {
+        background-position: 100% 50%
+    }
+    100% {
+        background-position: 0% 50%
+    }
 }
 
+@-moz-keyframes AnimationName {
+    0% {
+        background-position: 0% 50%
+    }
+    50% {
+        background-position: 100% 50%
+    }
+    100% {
+        background-position: 0% 50%
+    }
+}
+
+@keyframes AnimationName {
+    0% {
+        background-position: 0% 50%
+    }
+    50% {
+        background-position: 100% 50%
+    }
+    100% {
+        background-position: 0% 50%
+    }
+}
+
+
+.firefly {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    width: 0.4vw;
+    height: 0.4vw;
+    margin: -0.2vw 0 0 9.8vw;
+    animation: ease 200s alternate infinite;
+    pointer-events: none;
+
+    &::before,
+    &::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        transform-origin: -10vw;
+    }
+
+    &::before {
+        background: gray;
+        opacity: 0.4;
+        animation: drift ease alternate infinite;
+    }
+
+    &::after {
+        background: white;
+        opacity: 0;
+        box-shadow: 0 0 0vw 0vw yellow;
+        animation: drift ease alternate infinite, flash ease infinite;
+    }
+
+}
+
+$quantity: 15;
+@for $i from 1 through $quantity {
+    $steps: random(12) + 16 ;
+    $rotationSpeed: random(10) + 8s;
+    $left: random(90) + 5 ;
+    .firefly:nth-child(#{$i}) {
+        animation-name: move#{$i};
+        left: #{$left}vw;
+        &::before {
+            animation-duration: #{$rotationSpeed};
+        }
+        &::after {
+            animation-duration: #{$rotationSpeed}, random(6000) + 5000ms;
+            animation-delay: 0ms, random(8000) + 500ms;
+        }
+    }
+    @keyframes move#{$i} {
+        @for $step from 0 through $steps {
+            #{$step * (100 / $steps)}% {
+                transform: translateX(random(100)
+            -50 vw) translateY(random(100) - 50 vh) scale(random(75) / 100 + .25);
+            }
+        }
+    }
+}
+
+@keyframes drift {
+    0% {
+        transform: rotate(0deg)
+    }
+    100% {
+        transform: rotate(360deg)
+    }
+}
+
+@keyframes flash {
+    0%,
+    30%,
+    100% {
+        opacity: 0;
+        box-shadow: 0 0 0vw 0vw yellow;
+    }
+    5% {
+        opacity: 1;
+        box-shadow: 0 0 2vw 0.4vw yellow;
+    }
+}
 
 .container {
     max-width: 1240px;
@@ -44,10 +147,11 @@ body {
 
 .header {
     .container {
-       @apply flex justify-between items-center h-[70px];
+        @apply flex justify-between items-center h-[70px];
         .title {
             @apply text-xl uppercase font-bold text-primary;
         }
+
         .menu {
             @apply hidden md:block ;
 
@@ -65,6 +169,7 @@ body {
                         @apply text-primary;
                     }
                 }
+
                 a:after {
                     @apply -bottom-1.5 block h-0.5 bg-primary w-0;
                     content: "";
@@ -72,6 +177,7 @@ body {
                     position: absolute;
                     transition: width 0.3s ease 0s, left 0.3s ease 0s;
                 }
+
                 a:hover:after {
                     width: 100%;
                     left: 0;
@@ -79,6 +185,7 @@ body {
             }
         }
     }
+
     &.sticky {
         @apply w-full fixed top-0 border-b border-b-gray-700 shadow z-10 backdrop-blur-xl bg-gray-700 bg-opacity-50 overflow-hidden;
         animation: sticky-header 500ms;
@@ -86,8 +193,12 @@ body {
 }
 
 @keyframes sticky-header {
-    0%   {height: 0}
-    100% {height: 70px}
+    0% {
+        height: 0
+    }
+    100% {
+        height: 70px
+    }
 }
 
 .outer-ring {
@@ -97,7 +208,7 @@ body {
     width: 200px;
     background-image: linear-gradient(135deg, #FEED07 0%, #FE6A50 5%, #ED00AA 15%, #2FE3FE 50%, #8900FF 100%);
     border-radius: 50%;
-    animation-duration: 2s;
+    animation-duration: 3s;
     animation-name: rotate;
     animation-iteration-count: infinite;
 }
@@ -112,10 +223,13 @@ body {
 }
 
 @keyframes rotate {
-    0% {transform:rotate(0deg);}
-    100% {transform:rotate(360deg);}
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
-
 
 
 .section-title {
