Works and Skills Update

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -234,5 +234,5 @@ $quantity: 15;
 
 
 .section-title {
-    @apply text-2xl uppercase text-primary font-semibold;
+    @apply text-2xl uppercase text-primary font-semibold mb-6;
 }
